--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "start": "npx serve out",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.0.0",
