--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "npx serve out",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "tsx test/seo.test.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "next": "^14.0.0",
@@ -25,6 +28,8 @@
     "tailwindcss": "^3.3.3",
     "@types/react": "^18.2.21",
     "@types/node": "^20.5.0",
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "tsx": "^4.7.0",
+    "@playwright/test": "^1.39.0"
   }
 }
