--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwind-merge": "^2.2.1",
     "lucide-react": "^0.302.0",
     "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.0.2"
+    "@radix-ui/react-slot": "^1.0.2",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
