feat: add responsive image generator

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run generate-images && next build",
     "start": "npx serve out",
     "lint": "next lint",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "tsx test/seo.test.ts",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "generate-images": "tsx scripts/generate-images.ts"
   },
   "dependencies": {
     "next": "^14.0.0",
